Modify readme file

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -67,6 +67,10 @@
       </div>
     </main>
 
+    <footer class="footerContent">
+      <p> CREAMLIB, <span>Open-Source © 2019</span>, Contributors : Thomas Robbe - Angela Ricci - Johan Bekasinski</p>
+    </footer>
+
   </div>
   <script type="text/javascript" src="{{ '/assets/js/main.js' | url }}"></script>
   <script type="text/javascript" src="{{ '/assets/js/classlist-polyfill-IE.js' | url }}"></script>
