--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -271,6 +271,27 @@ div.demo app-breadcrumbs {
   display: block;
 }
 
+/* *********** FOOTER ************* */
+
+footer {
+  color: var(--body-text);
+  background-color: var(--n-light);
+  padding: 1rem 5%;
+}
+
+footer p {
+  font-size: 0.8rem;
+  line-height: 1.45;
+}
+
+@media screen and (min-width: 1000px) {
+  .footerContent p {
+    font-size: 1rem;
+    text-align: right;
+  }
+}
+
+
 /* *********** FORMS ************* */
 
 label {
