Modify logo link

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -20,7 +20,7 @@
 
       <!-- Logo -->
       <h1>
-        <a href="/" class="logo">
+        <a href="{{ '/' | url }}" class="logo">
           <picture>
             <source srcset="{{ '/assets/img/creamJS-logo.svg' | url }}" media="(min-width:1000px)" />
             <img src="{{ '/assets/img/creamNG-logo-sml.svg' | url }}" alt="Cream-NG, your accessible Angular Lib" />
