--- a/components/forms/fieldset/fieldset.html
+++ b/components/forms/fieldset/fieldset.html
@@ -1,5 +1,5 @@
 ---
-title: Fieldset
+title: Fieldset Component
 description: This is the fieldset component
 date: 2019-11-07
 tags:
@@ -26,7 +26,7 @@ layout: layouts/component.njk
 
             <div class="tip">
                 <svg width="40" height="40">
-                    <use href="assets/img/icons.svg#tip" /></svg>
+                    <use href="{{ '/assets/img/icons.svg#tip' | url }}" /></svg>
                 <div class="content">
                     <p>The <code>legend</code> element is mandatory for fieldsets.</p>
                 </div>
