--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -37,7 +37,7 @@
             <button class="panel-heading" aria-expanded="false" aria-controls="sousMenu{{category.data.tags[0]}}"
               id="itemMenu{{category.data.tags[0]}}">
               <svg>
-                <use xlink:href="assets/img/icons.svg#{{category.data.tags[0]}}"></use>
+                <use xlink:href="{{'/assets/img/icons.svg' | url}}#{{category.data.tags[0]}}"></use>
               </svg>
               {{ category.data.title }}
             </button>
@@ -76,6 +76,7 @@
   <script type="text/javascript" src="{{ '/assets/js/main.js' | url }}"></script>
   <script type="text/javascript" src="{{ '/assets/js/prettify.js' | url }}"></script>
   <script type="text/javascript" src="{{ '/assets/js/classlist-polyfill-IE.js' | url }}"></script>
+  <script type="text/javascript" src="{{ '/assets/js/librairie.js' | url }}"></script>
 </body>
 
 
