--- a/components/forms/fieldset/fieldset.html
+++ b/components/forms/fieldset/fieldset.html
@@ -26,7 +26,8 @@ layout: layouts/component.njk
 
             <div class="tip">
                 <svg width="40" height="40">
-                    <use href="{{ '/assets/img/icons.svg#tip' | url }}" /></svg>
+                    <use href="{{ '/assets/img/icons.svg#tip' | url }}" />
+                </svg>
                 <div class="content">
                     <p>The <code>legend</code> element is mandatory for fieldsets.</p>
                 </div>
