--- a/assets/css/librairie.css
+++ b/assets/css/librairie.css
@@ -410,3 +410,173 @@ fieldset.ui-fieldset > legend {
     font-size: 1.3em;
   }
 }
+
+/***************************/
+/***** SELECT-DATALIST *****/
+/***************************/
+.ui-select label, .ui-select-datalist label {
+  display: block;
+  padding-bottom: 0.3rem;
+}
+.ui-select select {
+  display: block;
+  font: 100%/1 var(--stack);
+  padding: 0.5em;
+}
+
+/* --- REGULAR DATALIST ---*/
+.ui-select-datalist input {
+  display: block;
+  font: 100%/1 var(--stack);
+  padding: 0.5em;
+}
+
+/***************************/
+/***** SLIDER-PROGRESS *****/
+/***************************/
+.ui-slider {
+  position: relative;
+}
+.ui-slider.bubble {
+  margin-bottom: 2em;
+}
+
+/* DEFAULT INPUT */
+.ui-slider input[type='range'] {
+  display: inline-block;
+  width: 50%;
+  background-color: rgba(0, 0, 0, 0);
+  padding: 0;
+  border: none;
+  vertical-align: baseline;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+/* DEFAULT INPUT FOCUS */
+.ui-slider input[type='range']:focus {
+  outline: none;
+}
+
+/* TRACK */
+.ui-slider input[type='range']::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px;
+  background: var(--main-light);
+  border-radius: 8px;
+  box-shadow: none;
+  cursor: pointer;
+}
+
+/* BALL */
+.ui-slider input[type='range']::-webkit-slider-thumb {
+  height: 26px;
+  width: 26px;
+  background: var(--sec-light);
+  margin-top: -9px;
+  border-radius: 26px;
+  -webkit-appearance: none;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+/* FOCUS TRACK */
+.ui-slider input[type='range']:focus::-webkit-slider-runnable-track {
+  background: #45abbc;
+}
+
+/* MOZ TRACK */
+.ui-slider input[type='range']::-moz-range-track {
+  width: 100%;
+  height: 8px;
+  background: var(--main-light);
+  border-radius: 8px;
+  box-shadow: none;
+  cursor: pointer;
+}
+/* MOZ BALL */
+.ui-slider input[type='range']::-moz-range-thumb {
+  height: 26px;
+  width: 26px;
+  background: var(--sec-light);
+  border: none;
+  border-radius: 26px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+/* MS TRACK */
+.ui-slider input[type='range']::-ms-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+.ui-slider input[type='range']::-ms-fill-lower {
+  background: var(--main-light);
+  border: 0.2px solid var(--n-medium);
+  border-radius: 2.6px;
+  box-shadow: none;
+}
+.ui-slider input[type='range']::-ms-fill-upper {
+  background: var(--main-light);
+  border: 0.2px solid var(--n-medium);
+  border-radius: 2.6px;
+  box-shadow: none;
+}
+.ui-slider input[type='range']::-ms-thumb {
+  height: 26px;
+  width: 26px;
+  border-radius: 12px;
+  background: var(--sec-light);
+  cursor: pointer;
+  height: 8.4px;
+}
+.ui-slider input[type='range']:focus::-ms-fill-lower {
+  background: var(--main-light);
+}
+.ui-slider input[type='range']:focus::-ms-fill-upper {
+  background: var(--main-light);
+}
+
+/* Output */
+.ui-slider #output {
+  position: relative;
+  top: 0.3em;
+  font: 1.2rem var(--stack-b);
+  text-transform: uppercase;
+  color: var(--main-color);
+  margin-left: 1rem;
+}
+.ui-slider.bubble #output {
+  position: absolute;
+  display: inline-block;
+  top: auto;
+  bottom: -2.4rem;
+  left: 0;
+  width: 40px;
+  height: 26.2px;
+  text-align: center;
+  color: var(--text-inv);
+  background-color: var(--n-dark);
+  padding-top: 0.3rem;
+  margin-left: 0;
+  border-radius: 10px;
+  transform: translate(-50%);
+}
+.ui-slider.bubble #output:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-bottom: 10px solid var(--n-dark);
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  margin-top: -1px;
+}
