--- a/components/forms/slider-progress/slider-progress.html
+++ b/components/forms/slider-progress/slider-progress.html
@@ -28,7 +28,19 @@ layout: layouts/component.njk
                 <!-- Input type RANGE -->
                 <input type="range" id="slider1" min="0" max="50" step="1" value="25" />
                 <!-- Output for display change value -->
-                <span for="slider1" id="output">0</span>
+                <span for="slider1" class="output" id="output">0</span>
+            </p>
+        </div>
+
+        <h4>Tooltip Slider</h4>
+        <div class="demo">
+            <!-- TOOLTIP SLIDER -->
+            <p class="ui-slider bubble">
+                <label for="slider2">Choose a value</label>
+                <!-- Input type RANGE -->
+                <input type="range" id="slider2" min="0" max="50" step="1" value="25" />
+                <!-- Output for display change value -->
+                <span for="slider2" class="output" id="output1">0</span>
             </p>
         </div>
     </div>
@@ -38,13 +50,8 @@ layout: layouts/component.njk
         <div class="demo">
             <!-- PROGRESS BAR -->
             <p class="ui-progress-bar">
-                <label for="choice">Choose an answer</label>
-                <select id="choice" name="choice">
-                    <option value="An answer">An answer</option>
-                    <option value="Another answer">Another answer</option>
-                    <option value="A 3rd answer">A 3rd answer</option>
-                    <option value="The right answer">The right answer</option>
-                </select>
+                <label for="prog1">Progress</label>
+                <progress id="prog1" name="prog1" max="100" value="30" disabled="disabled"></progress>
             </p>
         </div>
     </div>
@@ -54,13 +61,19 @@ layout: layouts/component.njk
         <div class="demo">
             <!-- PROGRESS SPINNER -->
             <p class="ui-progress-spinner">
-                <label for="choice">Choose an answer</label>
-                <select id="choice" name="choice">
-                    <option value="An answer">An answer</option>
-                    <option value="Another answer">Another answer</option>
-                    <option value="A 3rd answer">A 3rd answer</option>
-                    <option value="The right answer">The right answer</option>
-                </select>
+                <svg height="50" width="70" viewBox="0 0 50 50">
+                    <path fill="#45ABBC"
+                        d="M25,5A20,20,0,0,1,44.87,22.72,2.52,2.52,0,0,0,47.36,25h0a2.52,2.52,0,0,0,2.48-2.82,25,25,0,0,0-49.68,0A2.52,2.52,0,0,0,2.64,25h0a2.52,2.52,0,0,0,2.49-2.28A20,20,0,0,1,25,5Z">
+                        <animateTransform attributeName="transform" type="rotate" from="0 25 25" to="360 25 25" dur="1s"
+                            repeatCount="indefinite" />
+                    </path>
+
+                    <path fill="#6CBE45"
+                        d="M25,36.5A12.07,12.07,0,0,1,13,25.87a1.52,1.52,0,0,0-1.5-1.37h0A1.51,1.51,0,0,0,10,26.19a15.1,15.1,0,0,0,30,0,1.51,1.51,0,0,0-1.5-1.69h0A1.52,1.52,0,0,0,37,25.87,12.07,12.07,0,0,1,25,36.5Z">
+                        <animateTransform attributeName="transform" type="rotate" from="360 25 25" to="0 25 25"
+                            dur="1.5s" repeatCount="indefinite" />
+                    </path>
+                </svg>
             </p>
         </div>
     </div>
