--- a/components/navigation/breadcrumbs/breadcrumbs.html
+++ b/components/navigation/breadcrumbs/breadcrumbs.html
@@ -3,9 +3,28 @@ title: Breadcrumbs component
 description: This is the breadcrumbs component
 date: 2019-09-25
 tags:
-  - components
-  - navigation
+- components
+- navigation
 layout: layouts/component.njk
 ---
-<h2>Buttons</h2>
-<p>This is the bredcrumb component with vanilla JS</p>
+
+<!-- Component Page Title -->
+<div class="panelTitle">
+  <ul>
+    <li><a href="#breadcrumbs">Simple Breadcrumbs</a></li>
+  </ul>
+</div>
+
+<!-- Component Title -->
+<div class="titleComponent">
+  <div class="descriptionComponent" id="breadcrumbs">
+    <h3>Simple Breadcrumbs</h3>
+    <div class="demo">
+      <!-- SIMPLE BREADCRUMBS -->
+      <ol class="ui-breadcrumbs">
+        <li><a href="/"> Home </a></li>
+        <li>Breadcrumbs</li>
+      </ol>
+    </div>
+  </div>
+</div>
