--- a/components/blocks/blocks.html
+++ b/components/blocks/blocks.html
@@ -1,7 +1,8 @@
 ---
 layout: layouts/component.njk
 category: categories
-tags: blocks
+tags: 
+  - blocks
 title: Blocks elements
 description: This is components for blocks elements
 ---
