--- a/components/utilities/utilities.html
+++ b/components/utilities/utilities.html
@@ -1,7 +1,9 @@
 ---
 layout: layouts/component.njk
 category: categories
-tags: svg5
+tags:
+  - svg5
+  - utilities
 title: Utilities elements
 description: This is components for utilities elements
 ---
